[[releasenotes-34]]

= What's New in OpenNMS Horizon 34

== New features and important changes

=== `install.sh` script clears data directory and restores Karaf-related configuration files
To overcome common upgrading problems, the data directory is automatically pruned when invoking the `install.sh` script.
Furthermore, all Karaf-related configuration files are restored to their pristine state.

=== OpenNMS Plugin API

The OpenNMS Plugin API has been updated to version 1.6.0, which includes some new APIs ported over from the Horizon codebase to simplify plugin development, as well as cleanups to dependencies.
It also includes some fixes to the protocol list used by Enlinkd.

=== Expanded metadata support

It is now possible to use the metadata DSL in nearly all configuration files.
For details on all of the subsystems that support the metadata DSL, see xref:operation:deep-dive/meta-data.adoc[the operation manual].

=== Confd improvements

Support for `confd` has been added to the Sentinel container.

=== UI: structured node list

An enhanced node list has been introduced with options for sorting and filtering.

== Breaking changes
The default time series storage strategy is now by default RRDTool.

IMPORTANT: If you use JRobin, make sure you set the property.
You can easily verify it by checking the file extension created in the directory  `$\{OPENNMS_HOME}/share/rrd/snmp`. The extension .jrb indicates JRobin and .rrd indicates RRDtool.
If you miss this setting, all your timeseries files will be newely created as .rrd files and you won't have access to your JRobin files with your history.

IMPORTANT: When you have .jrb files, ensure after upgrading to Horizon 34 you explicitly configure JRobin in a file like `$\{OPENNMS_HOME}/etc/opennms.properties.d/timeseries.properties`.

.Configure explicitly JRobin for Horizon 34.x if required
[source, console]
----
org.opennms.rrd.strategyClass=org.opennms.netmgt.rrd.jrobin.JRobinRrdStrategy
----
